force-app/main/default/objects/Practice_Level_Membership_Assignment__c/Practice_Level_Membership_Assignment__c.object-meta.xml
<CustomObject>
    <label>Practice Level Membership Assignment</label>
    <nameField>
        <displayFormat>ATM-{0000}</displayFormat>
        <label>Account Team Membership Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Practice Level Membership Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>