force-app/main/default/objects/Practice_Level_Membership_Assignment__c/fields/Business_Account__c.field-meta.xml
<CustomField>
    <fullName>Business_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Business Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Practice Level Membership Assignments (Business Account)</relationshipLabel>
    <relationshipName>Account_Team_Memberships1</relationshipName>
    <type>Lookup</type>
</CustomField>