force-app/main/default/objects/Practice_Level_Membership_Assignment__c/fields/Business_Address__c.field-meta.xml
<CustomField>
    <fullName>Business_Address__c</fullName>
    <label>Business Address</label>
    <type>Address</type>
</CustomField>