force-app/main/default/objects/Practice_Level_Membership_Assignment__c/fields/Cancel_PLMA__c.field-meta.xml
<CustomField>
    <fullName>Cancel_PLMA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The PLMA membership is cancelled if this field is true</description>
    <label>Cancel PLMA</label>
    <type>Checkbox</type>
</CustomField>