force-app/main/default/objects/Practice_Level_Membership_Assignment__c/fields/Certification_Kit_Order_Summary__c.field-meta.xml
<CustomField>
    <fullName>Certification_Kit_Order_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certfification Kit Order Summary</label>
    <referenceTo>OrderSummary</referenceTo>
    <relationshipLabel>Practice Level Membership Assignments (Certification Kit Order Summary)</relationshipLabel>
    <relationshipName>Account_Team_Memberships1</relationshipName>
    <type>Lookup</type>
</CustomField>