force-app/main/default/objects/Practice_Level_Membership_Assignment__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <formula>ADDMONTHS( Start_Date__c ,12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>formula- ADDMONTHS( Start_Date__c ,12)</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>