force-app/main/default/objects/Practice_Level_Membership_Assignment__c/fields/Historical_PLMA__c.field-meta.xml
<CustomField>
    <fullName>Historical_PLMA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Historical PLMA</label>
    <referenceTo>Historical_PLMA__c</referenceTo>
    <relationshipLabel>Practice Level Membership Assignments</relationshipLabel>
    <relationshipName>Practice_Level_Membership_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>