force-app/main/default/objects/Practice_Level_Membership_Assignment__c/fields/Historical_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Historical_Start_Date__c</fullName>
    <label>Historical Start Date</label>
    <type>Date</type>
</CustomField>