force-app/main/default/objects/Practice_Level_Membership_Assignment__c/fields/Membership__c.field-meta.xml
<CustomField>
    <fullName>Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership</label>
    <referenceTo>Membership__c</referenceTo>
    <relationshipName>Account_Team_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>