force-app/main/default/objects/Practice_Level_Membership_Assignment__c/fields/Membership_Name__c.field-meta.xml
<CustomField>
    <fullName>Membership_Name__c</fullName>
    <formula>Membership__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Name</label>
    <type>Text</type>
</CustomField>