force-app/main/default/objects/Practice_Level_Membership_Assignment__c/fields/Need_Historical_Review__c.field-meta.xml
<CustomField>
    <fullName>Need_Historical_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need Historical Review</label>
    <type>Checkbox</type>
</CustomField>