force-app/main/default/objects/Practice_Level_Membership_Assignment__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>OrderSummary</referenceTo>
    <relationshipName>Account_Team_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>