force-app/main/default/objects/Practice_Level_Membership_Assignment__c/fields/Purchaser__c.field-meta.xml
<CustomField>
    <fullName>Purchaser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchaser</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Account_Team_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>