force-app/main/default/objects/Practice_Level_Membership_Assignment__c/fields/Renewal_DVM_Count__c.field-meta.xml
<CustomField>
    <fullName>Renewal_DVM_Count__c</fullName>
    <label>Renewal DVM Count</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>