force-app/main/default/objects/Practice_Level_Membership_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Start_Date__c</columns>
    <columns>Business_Account__c</columns>
    <columns>Membership__c</columns>
    <columns>Purchaser__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>